--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Site com Bootstrap</title>
+    <title>Tech PC: Pagina Inicial</title>
 </head>
 <body style="background-color:rgb(139, 139, 139);">
     <!--inicio do menu-->
@@ -29,12 +29,12 @@
                   Componentes a venda
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Placa mãe</a></li>
-                  <li><a class="dropdown-item" href="#">Memoria RAM</a></li>
-                  <li><a class="dropdown-item" href="#">Memoria interna HD/SSD</a></li>
-                  <li><a class="dropdown-item" href="#">Teclado e Mouse</a></li>
+                  <li><a class="dropdown-item" href="./pages/placa_mae.html">Placa mãe</a></li>
+                  <li><a class="dropdown-item" href="./pages/ram.html">Memoria RAM</a></li>
+                  <li><a class="dropdown-item" href="./pages/hd_ssd.html">Memoria interna HD/SSD</a></li>
+                  <li><a class="dropdown-item" href="./pages/teclado_mouse.html">Teclado e Mouse</a></li>
                   <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Gabinetes prontos</a></li>
+                  <li><a class="dropdown-item" href="./pages/gabinetes_prontos.html">Gabinetes prontos</a></li>
                 </ul>
               </li>
               <li class="nav-item">
@@ -77,8 +77,8 @@
         <div class="carousel-item">
           <img src="./img/imagem3.jpg" class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block card text-dark">
-            <h5>Third slide label</h5>
-            <p class="text-justify">Some representative placeholder content for the third slide.</p>
+            <h5>Componentes da maior qualidade</h5>
+            <p class="text-justify">Buscamos sempre trazer os melhores componentes para o seu computador com o preço cabivel para todos os publicos, seja para uso pessoal ou profissional.</p>
           </div>
         </div>
       </div>
