--- a/pages/hd_ssd.html
+++ b/pages/hd_ssd.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="../css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tech PC: Formulário</title>
+    <title>Tech PC: Memoria HD/SSD</title>
 </head>
 <body style="background-color:rgb(139, 139, 139);">
 <!--inicio do menu-->
@@ -22,7 +22,7 @@
                 <a class="nav-link" aria-current="page" href="../index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="./formulario.html">Formulario</a>
+                <a class="nav-link" href="./formulario.html">Formulario</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -38,7 +38,7 @@
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./sobre.html">Sobre</a>
+                <a class="nav-link active" href="./sobre.html">Sobre</a>
               </li>
             </ul>
             <form class="d-flex" role="search">
@@ -49,34 +49,12 @@
         </div>
       </nav>
 <!--fim do menu-->
+<div class="container">
 
- <!--inicio do formulario-->   
-<div class="container p-2">
-  <div class="card p-4 m-3">
-    <h1 class="text-center">Cadastro do Usuário</h1>
-    <form>
-        <div class="form-group">
-            <label for="exampleInputEmail1">Nome de usuário</label>
-            <input type="text" class="form-control" placeholder="Seu nome">
-          </div>
-        <div class="form-group mt-2">
-          <label for="exampleInputEmail1">Endereço de email</label>
-          <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Seu email">
-          <small id="emailHelp" class="form-text text-muted">Nunca vamos compartilhar seu email, com ninguém.</small>
-        </div>
-        <div class="form-group">
-            <label for="inputPassword5" class="form-label">Password</label>
-            <input type="password" id="inputPassword5" class="form-control" aria-describedby="passwordHelpBlock">
-            <div id="passwordHelpBlock" class="form-text">
-              Your password must be 8-20 characters long, contain letters and numbers, and must not contain spaces, special characters, or emoji.
-            </div>
-        </div>
-        <button type="submit" class="btn btn-dark mt-3">Enviar</button>
-      </form>
-    </div>
-    </div>
 </div>
-<!--fim do formulario-->
+<footer>
+
+</footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
