--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="../css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sobre</title>
+    <title>Tech PC: Sobre o site</title>
 </head>
 <body style="background-color:rgb(139, 139, 139);">
 <!--inicio do menu-->
@@ -29,12 +29,12 @@
                   Componentes a venda
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Placa mãe</a></li>
-                  <li><a class="dropdown-item" href="#">Memoria RAM</a></li>
-                  <li><a class="dropdown-item" href="#">Memoria interna HD/SSD</a></li>
-                  <li><a class="dropdown-item" href="#">Teclado e Mouse</a></li>
+                  <li><a class="dropdown-item" href="./placa_mae.html">Placa mãe</a></li>
+                  <li><a class="dropdown-item" href="./ram.html">Memoria RAM</a></li>
+                  <li><a class="dropdown-item" href="./hd_ssd.html">Memoria interna HD/SSD</a></li>
+                  <li><a class="dropdown-item" href="./teclado_mouse.html">Teclado e Mouse</a></li>
                   <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Gabinetes prontos</a></li>
+                  <li><a class="dropdown-item" href="./gabinetes_prontos.html">Gabinetes prontos</a></li>
                 </ul>
               </li>
               <li class="nav-item">
@@ -49,7 +49,12 @@
         </div>
       </nav>
 <!--fim do menu-->
+<div class="container">
 
+</div>
+<footer>
+
+</footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
