Adicionado responsividade na pagina inicial

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           </div>
         </div>
         <div class="carousel-item">
-          <img src="./img/imagem3.jpg" class="d-block w-100" alt="...">
+          <img src="./img/imagem3.jpg" class="d-block w-100 h-100" alt="...">
           <div class="carousel-caption d-none d-md-block card text-dark">
             <h5>Componentes da maior qualidade</h5>
             <p class="text-justify">Buscamos sempre trazer os melhores componentes para o seu computador com o preço cabivel para todos os publicos, seja para uso pessoal ou profissional.</p>
@@ -92,11 +92,27 @@
       </button>
     </div>
   </div>
-</div>
-<footer>
-    
-</footer>
 
+<div class="row" id="textos" style="font-size: 15px;">
+  <div class="card m-3 p-1">
+    <h5 class="text-center">Atendimento Virtual</h5>
+    <p class="text-justify">Nossos atendimentos sobre duvidas dos produtos podem ser discutidos a partir do seguinte contato: (67) 9950-12348.</p>
+  </div>
+  <div class="card m-3 p-1">
+    <h5 class="text-center">Computadores Modernos</h5>
+    <p class="text-justify">Vendemos computadores do periodo de 2019 à 2022, garantindo que o consumidor tenha o melhor produto para seu uso.</p>
+  </div>
+  <div class="card m-3 p-1">
+    <h5 class="text-center">Componentes da maior qualidade</h5>
+    <p class="text-justify">Buscamos sempre trazer os melhores componentes para o seu computador com o preço cabivel para todos os publicos, seja para uso pessoal ou profissional.</p>
+  </div>
+</div>
+
+
+</div>
+  <footer class="text-center text-light" style="background-color: #043b63;">
+      Guilherme Ferreira Tombini - INFO 6
+  </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
